@@ -17,26 +17,23 @@
 [Replace]
 
 [Variables]
-approveAdd   = message:z
-requestAdd   = message:z
-requestDel   = message:z
-requestFill  = message:z
+# Directory commands.
+dupeHead     = pattern:z
+dupeBody     = user:z group:z section:z release:p release:t age:d num:n
+dupeNone     = pattern:z
+dupeFoot     =
 
-approveHead  =
-approveBody  = user:z group:z releaseName:z age:d num:n
-approveNone  =
-approveFoot  =
+newHead      =
+newBody      = user:z group:z section:z release:p release:t age:d num:n
+newNone      =
+newFoot      =
 
-latestHead   =
-latestBody   = user:z group:z section:z release:p release:t age:d num:n
-latestNone   =
-latestFoot   =
+undupeHead   = pattern:z
+undupeBody   = entry:z num:n
+undupeNone   = pattern:z
+undupeFoot   =
 
-searchHead   = pattern:z
-searchBody   = user:z group:z section:z release:p release:t age:d num:n
-searchNone   = pattern:z
-searchFoot   =
-
+# Nuke commands.
 nukesHead    =
 nukesBody    = user:z group:z releaseName:z release:t multi:n reason:z files:n size:k age:d num:n
 nukesNone    =
@@ -52,6 +49,12 @@ unnukesBody  = user:z group:z releaseName:z release:t multi:n reason:z files:n s
 unnukesNone  =
 unnukesFoot  =
 
+# Other commands.
+approveHead  =
+approveBody  = user:z group:z releaseName:z age:d num:n
+approveNone  =
+approveFoot  =
+
 oneLinesHead =
 oneLinesBody = user:z group:z message:z message:t age:d num:n
 oneLinesNone =
@@ -62,7 +65,8 @@ requestsBody = user:z group:z request:z id:n age:d num:n
 requestsNone =
 requestsFoot =
 
-undupeHead   = pattern:z
-undupeBody   = entry:z num:n
-undupeNone   = pattern:z
-undupeFoot   =
+# SITE command responses.
+approveAdd   = message:z
+requestAdd   = message:z
+requestDel   = message:z
+requestFill  = message:z
