@@ -2,6 +2,7 @@ AlcoBot v0.7.0 (not released):
   NEW: Check for "DNS" fields in glFTPD user-files.
   NEW: Completed Project-ZS-NG support, for glFTPD only.
   NEW: Support for nxAutoNuke v2.3 (the ANUKESIZE event).
+  CHG: Renamed "latest" and "search" themes to "new" and "dupe", respectively.
   CHG: Renamed the "ips" array element to "hosts" for the UserInfo function.
   FIX: Corrected inconsistencies in the time duration functions (patch by iwi).
 
